@@ -97,6 +97,19 @@ module AuthenticatedSystem
       base.send :helper_method, :current_<%= file_name %>, :logged_in?
     end
 
+    # When called with before_filter :login_from_cookie will check for an :auth_token
+    # cookie and log the user back in if apropriate
+    def login_from_cookie
+      return unless cookies[:auth_token] && !logged_in?
+      user = <%= class_name %>.find_by_remember_token(cookies[:auth_token])
+      if user && user.remember_token?
+        user.remember_me
+        self.current_<%= file_name %> = user
+        cookies[:auth_token] = { :value => self.current_<%= file_name %>.remember_token , :expires => self.current_<%= file_name %>.remember_token_expires_at }
+        flash[:notice] = "Logged in successfully"
+      end
+    end
+
   private
     # gets BASIC auth info
     def get_auth_data
