@@ -1,6 +1,8 @@
 class <%= controller_class_name %>Controller < ApplicationController
   # Be sure to include AuthenticationSystem in Application Controller instead
   include AuthenticatedSystem
+  # If you want "remember me" functionality, add the this before_filter uncommended to Application Controller
+  before_filter :login_from_cookie
 
   # say something nice, you goof!  something sweet.
   def index
@@ -11,6 +13,10 @@ class <%= controller_class_name %>Controller < ApplicationController
     return unless request.post?
     self.current_<%= file_name %> = <%= class_name %>.authenticate(params[:login], params[:password])
     if current_<%= file_name %>
+      if params[:remember_me] == "1"
+        self.current_<%= file_name %>.remember_me
+        cookies[:auth_token] = { :value => self.current_<%= file_name %>.remember_token , :expires => self.current_<%= file_name %>.remember_token_expires_at }
+      end
       redirect_back_or_default(:controller => '/<%= controller_file_name %>', :action => 'index')
       flash[:notice] = "Logged in successfully"
     end
@@ -26,7 +32,8 @@ class <%= controller_class_name %>Controller < ApplicationController
   end
   
   def logout
-    self.current_<%= file_name %> = nil
+    self.current_<%= file_name %>.forget_me if logged_in?
+    cookies.delete :auth_token
     reset_session
     flash[:notice] = "You have been logged out."
     redirect_back_or_default(:controller => '/<%= controller_file_name %>', :action => 'index')
