@@ -1,12 +1,14 @@
 class <%= class_name %> < ActiveRecord::Migration
   def self.up
     create_table "<%= user_table_name %>", :force => true do |t|
-      t.column :login,            :string
-      t.column :email,            :string
-      t.column :crypted_password, :string, :limit => 40
-      t.column :salt,             :string, :limit => 40
-      t.column :created_at,       :datetime
-      t.column :updated_at,       :datetime
+      t.column :login,                     :string
+      t.column :email,                     :string
+      t.column :crypted_password,          :string, :limit => 40
+      t.column :salt,                      :string, :limit => 40
+      t.column :created_at,                :datetime
+      t.column :updated_at,                :datetime
+      t.column :remember_token,            :string
+      t.column :remember_token_expires, :datetime
     end
   end
 
