@@ -1,3 +1,7 @@
+* (3 July 2006)
+
+  Add cookie token support [cnf]
+
 * (12 June 2006)
 
   Fixed logged_in? so it does not keep hitting the database on every call if the user is not logged in.
